--- a/STAR/ENGINE/imgui.ini
+++ b/STAR/ENGINE/imgui.ini
@@ -15,20 +15,20 @@ Collapsed=0
 
 [Window][UpBar]
 Pos=0,22
-Size=20928,32
+Size=32,32
 Collapsed=0
 
 [Window][Assets]
 Pos=17,54
 Size=15,32
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000001,3
 
 [Window][Viewport]
 Pos=17,54
 Size=15,32
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000001,0
 
 [Window][Hierarchy]
 Pos=0,54
@@ -46,13 +46,13 @@ DockId=0x00000006,0
 Pos=17,54
 Size=15,32
 Collapsed=0
-DockId=0x00000004,2
+DockId=0x00000001,1
 
 [Window][Console]
 Pos=17,54
 Size=15,32
 Collapsed=0
-DockId=0x00000004,3
+DockId=0x00000001,2
 
 [Window][About]
 Pos=512,207
@@ -63,7 +63,7 @@ Collapsed=0
 Pos=17,54
 Size=15,32
 Collapsed=0
-DockId=0x00000004,4
+DockId=0x00000001,4
 
 [Window][Dear ImGui Debug Log]
 Pos=60,60
@@ -91,11 +91,11 @@ DockId=0x00000008,0
 Pos=17,48
 Size=15,32
 Collapsed=0
-DockId=0x00000004,5
+DockId=0x00000001,5
 
 [Table][0xE6A2A928,2]
-Column 0  Weight=0.3320
-Column 1  Weight=1.6680
+Column 0  Weight=0.3401
+Column 1  Weight=1.6599
 
 [Table][0x2280DCF6,2]
 Column 0  Weight=0.7739
@@ -114,12 +114,12 @@ Column 0  Weight=0.6532
 Column 1  Weight=1.3468
 
 [Table][0x99AF7713,2]
-Column 0  Weight=0.9268
-Column 1  Weight=1.0732
+Column 0  Weight=0.8992
+Column 1  Weight=1.1008
 
 [Table][0x180F33D8,2]
-Column 0  Weight=0.8862
-Column 1  Weight=1.1138
+Column 0  Weight=0.8915
+Column 1  Weight=1.1085
 
 [Table][0xBD84A3D6,2]
 Column 0  Weight=1.0000
@@ -135,21 +135,25 @@ Column 1  Weight=1.2925
 Column 2  Weight=1.0022
 
 [Table][0x41A92773,2]
-Column 0  Weight=0.5764
-Column 1  Weight=1.4236
+Column 0  Weight=0.6899
+Column 1  Weight=1.3101
 
 [Table][0xFDAD8403,2]
-Column 0  Weight=0.7778
-Column 1  Weight=1.2222
+Column 0  Weight=0.8450
+Column 1  Weight=1.1550
+
+[Table][0x88691585,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,54 Size=32,32 Split=X
-  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=984,595 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=888,595 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=273,597 Split=Y Selected=0x29EABFBD
-        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=254,132 Selected=0x29EABFBD
-        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=254,461 Selected=0xF57F7DD5
-      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=989,597 CentralNode=1 Selected=0x13926F0B
-    DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=374,595 Selected=0xEB2EF870
-  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=278,595 Selected=0xEB133EEB
+DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,54 Size=32,32 Split=X
+  DockNode      ID=0x00000003 Parent=0x09EF459F SizeRef=248,595 Split=Y Selected=0xF57F7DD5
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=295,145 Selected=0x29EABFBD
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=295,448 Selected=0xF57F7DD5
+  DockNode      ID=0x00000004 Parent=0x09EF459F SizeRef=1670,595 Split=X
+    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=984,595 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=888,595 CentralNode=1 Selected=0x13926F0B
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=374,595 Selected=0xEB2EF870
+    DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=278,595 Selected=0xEB133EEB
 
