--- a/STAR/ENGINE/imgui.ini
+++ b/STAR/ENGINE/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][UpBar]
 Pos=0,22
-Size=19520,32
+Size=2048,32
 Collapsed=0
 
 [Window][Assets]
@@ -56,7 +56,7 @@ DockId=0x00000001,2
 
 [Window][About]
 Pos=516,225
-Size=400,290
+Size=32,32
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -153,7 +153,7 @@ DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,54 Size=32,32 Split=X
     DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=295,448 Selected=0xF57F7DD5
   DockNode      ID=0x00000004 Parent=0x09EF459F SizeRef=1670,595 Split=X
     DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=984,595 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=888,595 CentralNode=1 Selected=0x49278EEE
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=888,595 CentralNode=1 Selected=0x13926F0B
       DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=374,595 Selected=0xEB2EF870
     DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=278,595 Selected=0xEB133EEB
 
