--- a/STAR/ENGINE/imgui.ini
+++ b/STAR/ENGINE/imgui.ini
@@ -15,20 +15,20 @@ Collapsed=0
 
 [Window][UpBar]
 Pos=0,22
-Size=2048,32
+Size=6016,32
 Collapsed=0
 
 [Window][Assets]
-Pos=17,54
-Size=15,32
+Pos=17,71
+Size=15,15
 Collapsed=0
-DockId=0x00000001,3
+DockId=0x0000000A,0
 
 [Window][Viewport]
 Pos=17,54
-Size=15,32
+Size=15,15
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000009,0
 
 [Window][Hierarchy]
 Pos=0,54
@@ -44,26 +44,26 @@ DockId=0x00000006,0
 
 [Window][File]
 Pos=17,54
-Size=15,32
+Size=15,15
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000009,1
 
 [Window][Console]
 Pos=17,54
-Size=15,32
+Size=15,15
 Collapsed=0
-DockId=0x00000001,2
+DockId=0x00000009,2
 
 [Window][About]
 Pos=516,225
-Size=32,32
+Size=400,306
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=17,54
 Size=15,32
 Collapsed=0
-DockId=0x00000001,4
+DockId=0x00000009,4
 
 [Window][Dear ImGui Debug Log]
 Pos=60,60
@@ -91,7 +91,7 @@ DockId=0x00000008,0
 Pos=17,48
 Size=15,32
 Collapsed=0
-DockId=0x00000001,5
+DockId=0x00000009,5
 
 [Table][0xE6A2A928,2]
 Column 0  Weight=0.3401
@@ -146,14 +146,20 @@ Column 1  Weight=1.1550
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x2DE2858B,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,54 Size=32,32 Split=X
-  DockNode      ID=0x00000003 Parent=0x09EF459F SizeRef=248,595 Split=Y Selected=0xF57F7DD5
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=295,145 Selected=0x29EABFBD
-    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=295,448 Selected=0xF57F7DD5
-  DockNode      ID=0x00000004 Parent=0x09EF459F SizeRef=1670,595 Split=X
-    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=984,595 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=888,595 CentralNode=1 Selected=0x13926F0B
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=374,595 Selected=0xEB2EF870
-    DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=278,595 Selected=0xEB133EEB
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,54 Size=32,32 Split=X
+  DockNode        ID=0x00000003 Parent=0x09EF459F SizeRef=325,595 Split=Y Selected=0xF57F7DD5
+    DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=295,246 Selected=0x29EABFBD
+    DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=295,347 Selected=0xF57F7DD5
+  DockNode        ID=0x00000004 Parent=0x09EF459F SizeRef=937,595 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=984,595 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=888,595 Split=Y Selected=0x13926F0B
+        DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=937,395 CentralNode=1 Selected=0x13926F0B
+        DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=937,198 Selected=0x26CE0345
+      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=374,595 Selected=0xEB2EF870
+    DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=278,595 Selected=0xEB133EEB
 
